# adc_cases

./: .gitignore  ASSETS.md  CLAUDE.local.md  CMakeLists.txt  CONTRIBUTING.md  README.md  adc_cases_STYLE_GUIDE.md  cases_manifest.toml  check_cases.py  models.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  numerical_issue.yml
.github/workflows/: ci.yml
adc_cases/: __init__.py  models.py  recipes.py
adc_cases/common/: __init__.py  case_export.h  checks.py  grid.py  initial_conditions.py  io.py  native.py  provenance.py  safe_euler.py
composition/: README.md  make_figures.py  run.py
composition/figures/: provenance.json
custom_scheme/: README.md  make_figures.py  run.py
custom_scheme/figures/: provenance.json
diocotron/: README.md  SWEEP_RESULTS.md  band_instability.py  run.py  sweep.py
diocotron/figures/: provenance.json
diocotron_amr/: README.md  make_figures.py  make_hero_gif.py  run.py
diocotron_amr/figures/: provenance.json
diocotron_dsl/: README.md  make_figures.py  run.py
diocotron_dsl/figures/: provenance.json
dsl_euler/: README.md  make_figures.py  run.py
dsl_euler/figures/: provenance.json
euler_poisson/: README.md  make_figures.py  run.py
euler_poisson/figures/: provenance.json
examples/: CMakeLists.txt  bench_amr.cpp  diocotron_column_amr.cpp  diocotron_highorder.cpp  diocotron_mpi.cpp  diocotron_theory.cpp  magnetic_diocotron.cpp  multispecies.cpp
examples/gpu/: CMakeLists.txt  advance_fab_kokkos.cpp  advect_kokkos.cpp  diocotron_amr_kokkos.cpp  diocotron_amr_mpi_kokkos.cpp  euler_poisson_kokkos.cpp  mg_kokkos.cpp  poisson_kokkos.cpp
hoffart_euler_poisson_dsl/: NORMALIZATION.md  README.md  RESULTS_SYSTEM_SCHUR.md  TUTORIAL.md  campaign_polar.sbatch  check_model.py  make_figures.py  model.py  results.py  run.py  run_polar.py  test_geometry_flag.py  test_polar_assembly.py  test_signs.py
hoffart_euler_poisson_dsl/diag/: README.md  convergence_reduced.py  diag_normalization_audit.py  diag_polar_omega.py  make_paper_figures.py  petri_eigenvalue.md  petri_eigenvalue.py  render_hires_npz.py  run_real_npz.py
hoffart_euler_poisson_dsl/docs/: NORMALIZATION.md  README.md  RESULTS_SYSTEM_SCHUR.md  T2_NORMALIZATION_AUDIT.md
hoffart_euler_poisson_dsl/figures/: provenance.json
hoffart_euler_poisson_dsl/slurm/: README.md  campaign_figures_n512.sbatch  campaign_geometry.sbatch
hoffart_euler_poisson_dsl/tests/: README.md  test_dump_npz.py  test_geometry_flag.py  test_polar_assembly.py  test_signs.py
hyqmom15/: README.md  gen_states.py  golden_crossing_gen.m  golden_crossing_relax_gen.m  golden_gen.m  golden_hll_gen.m  golden_relax_gen.m  golden_roe_gen.m  model.py  probe_native_projector.py  relaxation.py  run.py  run_amr.py  run_constant.py  run_crossing.py  run_diocotron.py  run_diocotron_periodic.py  run_electrostatic_wave.py  run_fluid_wave.py  run_golden_transport_relax.py  run_magnetic_wave.py  run_mpi.py  run_relaxation.py  run_waves.py  validate_native_projector.py
hyqmom15/campaigns/: README.md  check_campaign.py  export_h5.py  make_rapport.py  octave_matlab.py  romeo_rie_mom2d.py  romeo_rie_mom2d.sbatch  synthesis.py  to_paraview.py
hyqmom15/diagnostics/: __init__.py  check_diagnostics.py  realizability.py  symmetry.py
hyqmom15/golden/: golden_crossing.csv  golden_crossing_relax_dts.csv  golden_crossing_relax_in.csv  golden_crossing_relax_meta.csv  golden_crossing_relax_out.csv  golden_fx.csv  golden_fy.csv  golden_hll_dts.csv  golden_hll_meta.csv  golden_hll_state.csv  golden_relax_in.csv  golden_relax_meta.csv  golden_relax_out.csv  golden_roe_dt.csv  golden_roe_meta.csv  golden_roe_state.csv  golden_roe_state0.csv  golden_states.csv  golden_transport_relax_meta.csv  golden_transport_relax_state.csv  golden_vp.csv
hyqmom15/matlab_ref/: REFERENCE.md  __init__.py  check_goldens.py  check_matlab_ref.py  check_reference.py  check_time_policy.py  dt_policy.py  golden_dt_gen.m  golden_init_gen.m  golden_linearized_gen.m  (+5 more)
magnetic_isothermal_dsl/: README.md  make_figures.py  run.py
multispecies/: README.md  make_figures.py  run.py
perf/: RAPPORT.md  README.md  frontend_compare.py  plot_frontend.py
plasma/: README.md  make_figures.py  run.py
python/: CMakeLists.txt  REPRO_2510_11808.md  bindings.cpp  repro_paper_2510_11808.py  test_bindings.py
python/demos/: composition_api.py  diocotron.py  diocotron_amr.py  euler_poisson.py  multispecies.py  simulation.py  two_fluid_ap.py
romeo/: CONV_RESULTS.md  HERO_RESULTS.md  README.md  diocotron_amr_gpu.sbatch  diocotron_amr_mpi_gpu.sbatch  diocotron_conv.sbatch  proof_parallel_gpu.sbatch  sanitizer.sbatch
safe_euler_periodic/: README.md  run.py
schur_magnetized_cartesian/: README.md  make_figures.py  run.py
scripts/: bench_scaling.sh  plot_bench_scaling.py  plot_diocotron_theory.py  romeo_libadc_gpu.sbatch
spec3_board/: README.md  run.py
src/: diocotron_solver.cpp  euler_poisson_solver.cpp  multispecies_solver.cpp  simulation.cpp
tests/: CMakeLists.txt  test_advance_amr.cpp  test_advection_diffusion.cpp  test_amr_cluster_step.cpp  test_amr_disc.cpp  test_amr_reflux.cpp  test_amr_source.cpp  test_coupler_scheme.cpp  test_diocotron_fft.cpp  test_diocotron_invariants.cpp  test_diocotron_mobile_ions.cpp  test_diocotron_model.cpp  test_diocotron_theory.cpp  test_euler.cpp  test_euler_poisson_plasma.cpp  test_gauss_law.cpp  test_interfaces.cpp  test_magnetic_euler_poisson.cpp  test_mpi_amr_multipatch3.cpp  test_mpi_decoarse.cpp  test_mpi_diocotron.cpp  test_mpi_diocotron_amr.cpp  test_mpi_overlap.cpp  test_multispecies_solver.cpp  test_simulation.cpp  test_solver.cpp  test_two_fluid.cpp  test_two_fluid_boris.cpp  test_two_species_euler.cpp  test_weno2d.cpp
tutorial/: README.md  equivalence.py  run.py
tutorials/: 04_amr_multilevel.md  07_magnetic.md  11_build_solver.md  README.md
two_euler/: README.md  make_figures.py  run.py
two_fluid_ap/: .gitignore  README.md  _two_fluid_ap.cpp  make_figures.py  run.py  two_fluid_ap.hpp
two_species_dsl/: README.md  make_figures.py  run.py
(+60 files in other folders)
